--- a/books.html
+++ b/books.html
@@ -9,6 +9,7 @@
     crossorigin="anonymous"
   ></script>
   <script src="index.js"></script>
+  <script src="books.js"></script>
   <link rel="stylesheet" href="./index.css" />
 </head>
 <body id="books__body">
